alignment fixes

--- a/css/nav.css
+++ b/css/nav.css
@@ -109,6 +109,7 @@
     display: flex;
     height: 110px;
     position: relative;
+    align-items: center;
 }
 .info-container {
     transition: all 0.2s;
